alignment and fixes!

--- a/template/Add-blog/css/addBlog.css
+++ b/template/Add-blog/css/addBlog.css
@@ -6,8 +6,7 @@ Blog-details.ta-editor {
     font-size: 100%;
     margin: 20px 0;
 }
-.add-blog-cnt{padding: 20px;background: #fff; -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.4);
-    box-shadow: 0 1px 1px rgba(0,0,0,0.4);border-radius: 5px;}
+.add-blog-cnt{padding: 20px;background: #fff; -webkit-box-shadow: 0 1px 1px rgba(0,0,0,0.4); box-shadow: 0 1px 1px rgba(0,0,0,0.4);border-radius: 5px; margin-bottom: 40px;}
 
 form.addBlog-form label{font-size: 14px;font-weight:100;margin-bottom: 0;font-family: 'Roboto', sans-serif;}
 form.addBlog-form .form-control{border: none;background: none;box-shadow: none;border-radius: 0;border-bottom: solid 1px #d7d7d7;padding-left: 0;font-size: 18px; }
